Exe化 (#19)
* Windows用アプリイメージの作成タスクを追加し、バッチファイルを更新
* アプリにアイコンを追加し、Windowsアプリイメージ作成タスクを更新